# simple_social

./: .gitignore  pyproject.toml
src/: app.py  db.py
