[project]
name = "simple-social"
version = "0.1.0"
description = ""
authors = [
    {name = "Bryan Lima",email = "bryanlimaz630@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "fastapi-users[sqlalchemy] (>=15.0.5,<16.0.0)",
    "imagekitio (>=5.5.2,<6.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false